--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         </li>
                     </ul>
                 </nav>
-                <p class="footer__copyright">ofer dadon:)>
+                <p class="footer__copyright">ofer dadon:)><p>
             </footer>
     
         </div>
