--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="pages/index.css">
     </head>
 
-    <body class=body>
+    <body class="body">
         <div class="body__container">
             <header class="header">
                 <img 
@@ -61,51 +61,51 @@
                 <section class="photo-grid">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (1).jpg" 
+                        src="./images/(photo-grid-1).jpg" 
                         alt="Highway">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (2).jpg" 
+                        src="./images/(photo-grid-2).jpg" 
                         alt="Lake">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (3).jpg" 
+                        src="./images/(photo-grid-3).jpg" 
                         alt="Seagulls">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (4).jpg" 
+                        src="./images/(photo-grid-4).jpg" 
                         alt="Boise">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (5).jpg" 
+                        src="./images/(photo-grid-5).jpg" 
                         alt="Fog">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (6).jpg" 
+                        src="./images/(photo-grid-6).jpg" 
                         alt="Valley">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (7).jpg" 
+                        src="./images/(photo-grid-7).jpg" 
                         alt="Pass">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (8).jpg" 
+                        src="./images/(photo-grid-8).jpg" 
                         alt="Twig">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (9).jpg" 
+                        src="./images/(photo-grid-9).jpg" 
                         alt="Clouds">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (10).jpg" 
+                        src="./images/(photo-grid-10).jpg" 
                         alt="Oasis">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (11).jpg" 
+                        src="./images/(photo-grid-11).jpg" 
                         alt="Wires">
                     <img 
                         class="photo-grid__item" 
-                        src="./images/__item (12).jpg" 
+                        src="./images/(photo-grid-12).jpg" 
                         alt="Road">
                 </section>
     
@@ -122,7 +122,7 @@
                         </div>
                         <img 
                             class="place__image" 
-                            src="./images/__image( 1-maine).jpg" 
+                            src="./images/place-maine.jpg" 
                             alt="Maine lighthouse">
                         <div class="place__paragraph-container">
                             <p class="place__paragraph">Still, as sparsely populated as it was in the 1600s, this is an
@@ -145,7 +145,7 @@
                                 href="https://www.timberland.com/timberlandpro.html"
                                 target="_blank">timberland.com</a>
                         </div>
-                        <img class="place__image" src="./images/__image (2-new-hampshire).jpg" alt="New Hamshire">
+                        <img class="place__image" src="./images/place-new-hampshire.jpg" alt="New Hamshire">
                         <div class="place__paragraph-container">
                             <p class="place__paragraph">There's no better place to lose yourself in nature than in
                                 springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is
@@ -171,7 +171,7 @@
                         </div>
                         <img 
                             class="place__image" 
-                            src="./images/__image (3-new-york.jpg" 
+                            src="./images/place-new-york.jpg" 
                             alt="New York">
                         <div class="place__paragraph-container">
                             <p class="place__paragraph">Not only famous for “The Big Apple,” the state of NY also has
@@ -196,7 +196,7 @@
                         </div>
                         <img 
                             class="place__image" 
-                            src="./images/__image (4-erie).jpg" 
+                            src="./images/place-erie.jpg" 
                             alt="Pennsylvania">
                         <div class="place__paragraph-container">
                             <p class="place__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,”
@@ -224,7 +224,7 @@
                         </div>
                         <img 
                             class="place__image" 
-                            src="./images/__image (5-ohio).jpg" 
+                            src="./images/place-ohio.jpg" 
                             alt="Ohio">
                         <div class="place__paragraph-container">
                             <p class="place__paragraph">From the college capital of Columbus to the clean coastline of
